docs: websocket
